infrastructure/ingress-nginx-prod/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.nguyenth4nh.id.vn
      secretName: frontend-tls 
  rules:
    - host: app.nguyenth4nh.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
